# Stroke-Classification

./: .gitignore  LICENSE  README.md  README_TR.md  config.yaml  pyproject.toml  run_pipeline.py
results/kd/: .gitkeep
src/: data_prep.py  ensemble_eval.py  evaluate.py  models.py  train_cnn.py  train_kd.py
thesis/results/cnn/Densenet121/: densenet.txt
thesis/results/cnn/Densenet201/: Densenet201_losses_Fold1.txt  Densenet201_losses_Fold2.txt  Densenet201_losses_Fold3.txt  Densenet201_metrics_Fold1.txt  Densenet201_metrics_Fold2.txt  Densenet201_metrics_Fold3.txt
thesis/results/cnn/EfficientNetb0/: EfficientNetb0_losses_Fold1.txt  EfficientNetb0_losses_Fold2.txt  EfficientNetb0_losses_Fold3.txt  EfficientNetb0_metrics_Fold1.txt  EfficientNetb0_metrics_Fold2.txt  EfficientNetb0_metrics_Fold3.txt
thesis/results/cnn/EfficientNetb3/: efficientnet.txt
thesis/results/cnn/Inceptionv3/: inception.txt
thesis/results/cnn/Resnet18/: resnet.txt
thesis/results/cnn/Resnet50/: resnet50_losses_Fold1.txt  resnet50_losses_Fold2.txt  resnet50_losses_Fold3.txt  resnet50_metrics_Fold1.txt  resnet50_metrics_Fold2.txt  resnet50_metrics_Fold3.txt
thesis/results/confusion_matrix/Densenet121/: Densenet121_confusion_matrix_Fold1.txt  Densenet121_confusion_matrix_Fold2.txt  Densenet121_confusion_matrix_Fold3.txt  Densenet121_errors_Fold1.csv  Densenet121_errors_Fold2.csv  Densenet121_errors_Fold3.csv
thesis/results/ensemble/: kd_ensemble_2model.txt  kd_ensemble_3model.txt  kd_ensemble_4model.txt  kd_ensemble_5model.txt  kd_ensemble_6model.txt
(+73 files in other folders)
